﻿$Revision$
	$Author$ $Date$
	1. при пустом значении параметра log-location в catalog.xml пораждалось исключение.
	 Зачем? проверим сразу. и логи в отладчике чисты.

#Revision: 1597
	#Author: ctapmex Date: 2010-10-26 10:09:08 +0600 (Вт, 26 окт 2010)
	1. warnings в malloc.c при сборке x64. спасибо 2useven10, патчи были высланы автору malloc.c.

#Revision: 1588
	#Author: ctapmex Date: 2010-10-25 13:24:30 +0600 (Пн, 25 окт 2010)
	1. убраны warnings
	2. исправлена ошибка в определении работы 32 битной библиотеки под 64 битной операционкой.

#Revision: 1571
	#Author: ctapmex Date: 2010-10-14 00:06:19 +0600 (Чт, 14 окт 2010)
	1. вынес вызов getenv на уровень выше,зачем часто дергать системную функцию

#Revision: 1570
	#Author: ctapmex Date: 2010-10-13 23:25:14 +0600 (Ср, 13 окт 2010)
	1. поиск модуля colorer_x64 на 64 битной системе
	2. stack overflow из 1563 устранен для всех режимов фара (только win). Хак, но работает.

#Revision: 1566
	#Author: ctapmex Date: 2010-10-07 16:00:01 +0600 (Чт, 07 окт 2010)
	1. 1563 проверено на x64 - небольшая поправка. На моих комьютерах как под x86, так и под x64 перестало
	падать, строка просто не раскрашена до конца. !!НО , даный метод не работает если запустить x86 фар, 
	на x64 операционке.  Адресация не та. Пока так.

#Revision: 1563
	#Author: ctapmex Date: 2010-10-06 12:03:56 +0600 (Ср, 06 окт 2010)
	1. исправлен stack overflow при работе с длинными строками. Нужно проверить на x64 и выставить
	правильное значение.

#Revision: 1549
	#Author: ctapmex Date: 2010-09-20 23:06:59 +0600 (Пн, 20 сен 2010)
	1. исправлен stack overflow при уничтожении ParseCache. Патч работает, утечек памяти нет.
     Но для полного счастья нужно работу с ParseCache переделать. Но это wishe.

#Revision: 1479
	#Author: ctapmex Date: 2010-04-15 20:54:12 +0600 (Чт, 15 апр 2010)
	1. добавлены процедуры FileTypeImpl.addParam и FileTypeImpl.setParamDefaultValue (нельзя зафрендить
	класс FileTypeImpl из внешнего,для библиотеки, класса)

#Revision: 1476